Fixes to rendering and partial fix of input

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,4 @@ LINK_DIRECTORIES(lib/wiiuse/build/src)
 file(GLOB_RECURSE SOURCES "src/*.cpp")
 
 add_executable(run.exe ${SOURCES})
-target_link_libraries(run.exe wiiuse)
+target_link_libraries(run.exe wiiuse serialport)
