--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 2.8.9)
 project(rad-LED)
 
+set(CMAKE_CXX_FLAGS "-pthread")
+
 INCLUDE_DIRECTORIES(lib/wiiuse/src)
 LINK_DIRECTORIES(lib/wiiuse/build/src)
 
